--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -99,8 +99,8 @@
                 <!-- USO CPU -->
                 <div class="kpiUso">
                     <div class="tituloKpi">
-                        <h2>Média de utilização CPU (%)</h2>
-                        <h3>Últimos 30 dias:</h3>
+                        <h2>Maior pico de utilização (Anual)</h2>
+                        <h3>CPU - 14/02</h3>
                     </div>
                     <span class="txtKpi">
                         <p class="dadoKpi" id="usoCpu" style="color: red;">87%</p>
@@ -111,25 +111,25 @@
                 <!-- USO RAM -->
                 <div class="kpiUso">
                     <div class="tituloKpi">
-                        <h2>Média de utilização RAM (%)</h2>
-                        <h3>Últimos 30 dias:</h3>
+                        <h2>Mês com MAIS sobrecargas</h2>
+                        <h3>(Alertas gerados)</h3>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="usoRam">60%</p>
+                        <p class="dadoKpi" id="usoRam">Fevereiro</p>
                     </span>
-                    <h3>Parâmetro de alerta<b id="parametroRam" style="color: red; font-size: 14px;">80%</b></h3>
+                    <h3>Quantidade de alertas:<b id="parametroRam" style="color: red; font-size: 14px;">134</b></h3>
                 </div>
 
                 <!-- USO DISCO -->
                 <div class="kpiUso">
                     <div class="tituloKpi">
-                        <h2>Média de utilização Disco (%)</h2>
-                        <h3>Últimos 30 dias:</h3>
+                        <h2>Mês com MENOS sobrecargas</h2>
+                        <h3>(Alertas gerados)</h3>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="usoDisco">55%</p>
+                        <p class="dadoKpi" id="usoDisco">Maio</p>
                     </span>
-                    <h3>Parâmetro de alerta<b id="parametroDisco" style="color: red; font-size: 14px;">90%</b></h3>
+                    <h3>Quantidade de alertas<b id="parametroDisco" style="color: red; font-size: 14px;">21</b></h3>
                 </div>
 
             </div>
@@ -139,7 +139,7 @@
             <div class="grafSuperior">
                 <div class="chart-container-blue">
                     <div class="chartCabecalho">
-                        <h2><i class='bx bx-chip' style="border: solid 1px white; border-radius: 8px;"></i> CPU</h2>
+                        <h2><i class='bx bx-chip' style="border: solid 1px white; border-radius: 8px;"></i> Utilização CPU (%)</h2>
 
                         <div class="filtrar">
                             <h3>Filtrar:</h3>
@@ -154,7 +154,7 @@
 
                 <div class="chart-container-blue">
                     <div class="chartCabecalho">
-                        <h2><i class='bx bxs-save' style="border: solid 1px white; border-radius: 8px;"></i> Disco</h2>
+                        <h2><i class='bx bxs-save' style="border: solid 1px white; border-radius: 8px;"></i> Utilização Disco (%)</h2>
 
                         <div class="filtrar">
                             <h3>Filtrar:</h3>
@@ -188,7 +188,7 @@
                 <!-- ram -->
                 <div class="chart-container-white">
                     <div class="chartCabecalho">
-                        <h2><i class='bx bxs-memory-card' style="border: solid 1px black; border-radius: 8px;"></i> RAM
+                        <h2><i class='bx bxs-memory-card' style="border: solid 1px black; border-radius: 8px;"></i> Utilização RAM (%)
                         </h2>
 
                         <div class="filtrar">
@@ -206,7 +206,7 @@
                 <!-- rede -->
                 <div class="chart-container-white">
                     <div class="chartCabecalho">
-                        <h2><i class='bx bx-wifi' style="border: solid 1px black; border-radius: 8px;"></i> Rede</h2>
+                        <h2><i class='bx bx-wifi' style="border: solid 1px black; border-radius: 8px;"></i> Utilização Rede (%)</h2>
 
                         <div class="filtrar">
                             <h3>Filtrar:</h3>
@@ -228,7 +228,7 @@
                             componente</h2>
                         <div class="filtrar">
                             <h3>Filtrar:</h3>
-                            <div class="iconeFiltro">
+                            <div class="iconeFiltro" onclick="abrirModal('Alertas')">
                                 <i class='bx bx-filter-alt' style="color: #ffffff;"></i>
                             </div>
                         </div>
