add: Padronização Telas

--- a/web-data-viz/public/listadeservidores.html
+++ b/web-data-viz/public/listadeservidores.html
@@ -63,15 +63,17 @@
             
 
             <div class="componentesContainer">
-                <table class="tabelaContainer">
+                <table >
+                    <thead>
                     <tr>
                         <th>Servidor</th>
                         <th>Componente(s)</th>
                         <th>IP</th>
                         <th>Visualizar</th>
                         <th></th>
-                        <!-- excluir -->
+                        
                     </tr>
+                </thead>
                 </table>
                 <div class="pagination" id="paginacao"></div>
             </div>
