--- a/web-data-viz/public/componentes.html
+++ b/web-data-viz/public/componentes.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <link rel="stylesheet" href="./assets/styles/componentes.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
-    <script src="./assets/Scripts/backendComponentes.js"></script>
+    <!-- <script src="./assets/Scripts/backendComponentes.js"></script> -->
     <title>Lista de Componentes</title>
 </head>
 
@@ -64,6 +64,7 @@
 
             <div class="componentesContainer">
                 <table class="tabelaContainer">
+                    <thead>
                     <tr>
                         <th>ID Componente</th>
                         <th>Tipo do componente</th>
@@ -71,8 +72,9 @@
                         <th>Limite grave</th>
                         <th>Limite atenção</th>
                         <th></th>
-                        <!-- excluir -->
+                       
                     </tr>
+                </thead>
                 </table>
                 <div class="pagination" id="paginacao"></div>
             </div>
@@ -167,14 +169,16 @@
     //PARTE DE RENDERIZAR E PAGINAR CASO HAJA MUITOS ELEMENTOS DO VITAO alertas.js, PODE SER UTIL(PRECISA IMPLEMENTAR)
     function renderTabela(pagina) {
         const tabela = document.getElementById("tabela-alertas")
-        tabela.innerHTML = ` <tr>
-                            <th>Servidor</th>
-                            <th>Componente</th>
-                            <th>Data</th>
-                            <th>Gravidade</th>
-                            <th>Status</th>
-                            <th>Visualizar</th>
-                        </tr>`
+        tabela.innerHTML = `<thead> 
+                          <tr>
+                          <th>Servidor</th>
+                          <th>Componente</th>
+                          <th>Data</th>
+                          <th>Gravidade</th>
+                          <th>Status</th>
+                          <th>Visualizar</th>
+                      </tr>
+                      </thead>`
 
         const inicio = (pagina - 1) * itensPorPagina
         const fim = inicio + itensPorPagina
