--- a/web-data-viz/public/fabricas.html
+++ b/web-data-viz/public/fabricas.html
@@ -146,7 +146,7 @@
         Swal.fire({
             html: `
             <div class="modal-test">
-                <div class="containerCadastroFunc">
+                <div class="containerCadastroFrabic">
                     <h3>Cadastrar Fábrica</h3>
                     <label>Nome Fábrica: <input value="" id="inpNomeAtt" placeholder="Ex: Fábrica Norte"></label>
                     <label>Função: <input value="" id="inpFuncaoAtt" placeholder="Ex: Montagem motor"></label>
