Arruma responsividade e começa rotas servidores

--- a/web-data-viz/public/fabricas.html
+++ b/web-data-viz/public/fabricas.html
@@ -140,7 +140,7 @@
         menu.classList.toggle('nav-active')
 
     })
-
+    
     //MODAL ADD
     function abrirModalAdd() {
         Swal.fire({
@@ -148,10 +148,10 @@
             <div class="modal-test">
                 <div class="containerCadastroFrabic">
                     <h3>Cadastrar Fábrica</h3>
-                    <label>Nome Fábrica: <input value="" id="inpNomeAtt" placeholder="Ex: Fábrica Norte"></label>
-                    <label>Função: <input value="" id="inpFuncaoAtt" placeholder="Ex: Montagem motor"></label>
-                    <label>Limite atenção: <input value="" id="inpLAAtt" placeholder="Ex: 10"></label>
-                    <label>Limite grave: <input value="" id="inpLGAtt" placeholder="Ex 15"></label>
+                    <label>Nome Fábrica: <input value="" id="iptNomeFabrica" placeholder="Ex: Fábrica Norte"></label>
+                    <label>Função: <input value="" id="iptFuncaoFabrica" placeholder="Ex: Montagem motor"></label>
+                    <label>Limite atenção: <input value="" id="iptLimiteAtencao" placeholder="Ex: 10"></label>
+                    <label>Limite grave: <input value="" id="iptLimiteGrave" placeholder="Ex 15"></label>
                 </div>
 
             </div>
