adiciona versão beta dashAdmin

--- a/web-data-viz/public/componentes.html
+++ b/web-data-viz/public/componentes.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <link rel="stylesheet" href="./assets/styles/componentes.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
-    <!-- <script src="./assets/Scripts/backendComponentes.js"></script> -->
+    <script src="./assets/Scripts/backendComponentes.js"></script>
     <title>Lista de Componentes</title>
 </head>
 
@@ -119,7 +119,6 @@
                     <div class="modal-test">
                             <div class="containerCadastroComp">
                                 <h3>Cadastro de Componentes</h3>
-                                <h4>Cadastre um novo componente que deseja monitorar.</h4>
                                 <label>Tipo:</p><select id="sltTipo" class="sltsCad" onchange="listarMedida()"><option value="#" selected>Selecione o Componente</option></select></label>
                                 <label>Medida:</p><select id="sltMedida" class="sltsCad"> <option value="#" selected>Selecione a Medida</option> </select></label>
                                 <label>Modelo</p><input class="iptsCad" id="iptModelo" placeholder="Ex: intel core, amd"></label>
