add: select servidor e mes dash

--- a/web-data-viz/public/dashDuda.html
+++ b/web-data-viz/public/dashDuda.html
@@ -60,17 +60,15 @@
                     <h1>Análise do mês de Maio</h1>
             </div>
             <div class="servidor">
-                    <select name="" id="">
-                        <option value="">Servidor: SP-01</option>
-                        <option value="">Servidor: SP-02</option>
-                        <option value="">Servidor: SP-03</option>
+                    <select id="slt_servidor">
+                    <option selected value="">Todos os Servidores</option>
+                   
                     </select>
 
 
-                    <select name="" id="">
-                        <option value="">Maio</option>
-                        <option value="">Junho</option>
-                        <option value="">Julho</option>
+                    <select id="slt_mes">
+                        <option selected value="">Mês Atual</option>
+                       
                     </select>
             </div>
 
@@ -205,4 +203,5 @@
         menu.classList.toggle('nav-active')
 
     });
+
 </script>
