--- a/web-data-viz/public/dashGestaofabrica.html
+++ b/web-data-viz/public/dashGestaofabrica.html
@@ -60,6 +60,7 @@
     </div>
 
     <h1>Gestão da Infraestrutura</h1>
+    <h2>Veja seus componentes</h2>
         
         <div class="tabs">
             <button class="arrow arrow-left">&#9664;</button>
@@ -437,12 +438,12 @@
                         name: {
                             offsetY: -10,
                             show: true,
-                            color: '#666',
+                            color: '#011f27',
                             fontSize: '17px'
                         },
                         value: {
                             formatter: val => parseInt(val) + '%',
-                            color: '#111',
+                            color: '#011f27',
                             fontSize: '36px',
                             show: true
                         }
@@ -455,7 +456,7 @@
                     shade: 'dark',
                     type: 'horizontal',
                     shadeIntensity: 0.5,
-                    gradientToColors: ['#e74c3c'],
+                    gradientToColors: ['#011f27'],
                     opacityFrom: 1,
                     opacityTo: 1,
                     stops: [0, 100]
