--- a/web-data-viz/public/dashMonitoramento.html
+++ b/web-data-viz/public/dashMonitoramento.html
@@ -80,27 +80,29 @@
             <div class="tempoReal">
 
                 <div class="texto">
-                    <h1>Dashboard Monitoramento</h1>
+                    <h2>Dashboard Monitoramento</h2>
                     <p>Acompanhe os servidores em tempo real</p>
                 </div>
             </div>
 
             <div class="tempoReal">
-                <div class="tempo_atividade">
-                    <h3 id="alerta">Quantidade de servidores(critico)</h3>
-                    <br>
-                    <h1 id="alerta">13 </h1>
-                </div>
-                <div class="tempo_atividade">
-                    <h3>Quantidade de servidores(atenção)</h3>
-                    <br>
-                    <h1>CPU </h1>
-                </div>
-                
-                <div class="tempo_atividade">
-                    <h3>Total de servidores monitorados</h3>
-                    <br>
-                    <h1>21 </h1>
+                <div class="containerKpis">
+                    <div class="tempo_atividade">
+                        <h3 id="alerta">Quantidade de servidores(critico)</h3>
+                        <br>
+                        <p>2</p>
+                    </div>
+                    <div class="tempo_atividade">
+                        <h3>Quantidade de servidores(atenção)</h3>
+                        <br>
+                        <p>4</p>
+                    </div>
+                    
+                    <div class="tempo_atividade">
+                        <h3>Total de servidores monitorados</h3>
+                        <br>
+                        <p>6</p>
+                    </div>
                 </div>
             </div>
     </div>
