--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -60,7 +60,6 @@
                 </div>
                 <div class="txtInfo">
                     <p id="empresaNome">Nissan</p>
-                    <p class="endereco"> Rua Haddock Lobo, 595</p>
                 </div>
             </div>
 
@@ -68,8 +67,8 @@
                 <i class='bx bxs-user-circle' style="font-size: 4vw;"></i>
                 <div class="txtInfo">
                     <div class="txt">
-                        <p id="empresaNome">Jose</p>
-                        <p class="endereco"> jose@gmail.com</p>
+                        <p id="usuarioNome">Jose</p>
+                        <p id="usuarioEmail"> jose@gmail.com</p>
                     </div>
                     <i class='bx bx-chevron-down' style="font-size: 3vw;"></i>
                 </div>
@@ -85,7 +84,7 @@
                     <div class="tituloDash">
                         <p id="titulo">Análise de risco do componente - </p>
                         <div class="sltInvisivel">
-                            <select id="sltServidor">
+                            <select id="sltComponente">
                                 <option value="" selected>CPU</option>
                                 <option value="">RAM</option>
                                 <option value="">Rede</option>
@@ -103,9 +102,7 @@
                 </div>
                 <div class="servidor">
                     <select name="" class="sltRoxo" id="sltServidor">
-                        <option value="">Servidor: SP-01</option>
-                        <option value="">Servidor: SP-02</option>
-                        <option value="">Servidor: SP-03</option>
+                        
                     </select>
                 </div>
             </div>
@@ -122,7 +119,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="probFalha" style="color: red;">72%</p>
                     </span>
-                    <h3>Quantidade de alertas: <p>32</p>
+                    <h3>Quantidade de alerta total: <p>32</p>
 
                 </div>
 
@@ -154,12 +151,12 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="confiabilidade">42/100</p>
                     </span>
-                    <h3>Faixa: <p>Zona de risco</p>
+                    <h3>Faixa: <p style="color: yellow;">Zona de risco</p>
                     </h3>
                 </div>
 
             </div>
-
+            
 
             <!-- charts -->
             <div class="grafSuperior">
@@ -222,7 +219,7 @@
                             <span>Tipo de Previsão:</span><br>
                             <select id="tipo">
                                 <option value="alertas">Número de Alertas Previstos (Prox. Mês)</option>
-                                <option value="risco">Probabilidade de Sobrecarga do Componente (Próx.Semestre)</option>
+                                <option value="risco">Percentual de alertas críticos (Próx.Semestre)</option>
                                 <option value="tendencia">Tendência de Crescimento de Uso (7 dias)</option>
                             </select>
                         </div>
