--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opticar - Análise de Dados</title>
-    <link rel="stylesheet" href="assets/styles/analiseDados.css">
+    <link rel="stylesheet" href="assets/styles/graficosDashComponente.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="./assets/Scripts/sessao.js" defer></script>
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-<script src="assets/Scripts/graficosAnaliseDados.js" defer></script>
+<script src="assets/Scripts/backDashComponente.js" defer></script>
 
 
 
@@ -85,10 +85,10 @@
                         <p id="titulo">Análise de risco do componente - </p>
                         <div class="sltInvisivel">
                             <select id="sltComponente">
-                                <option value="" selected>CPU</option>
-                                <option value="">RAM</option>
-                                <option value="">Rede</option>
-                                <option value="">Disco</option>
+                                <option value="Cpu" selected>CPU</option>
+                                <option value="Ram">RAM</option>
+                                <option value="Rede">Rede</option>
+                                <option value="Disco">Disco</option>
                             </select>
                         </div>
                         <!-- data -->
@@ -101,6 +101,7 @@
                     <p class="descricao"> Acompanhe o desempenho do seu componente com base em registros históricos.</p>
                 </div>
                 <div class="servidor">
+                    <p style="font-size: 25px;display: flex;align-items: center;">Selecione o servidor:</p>
                     <select name="" class="sltRoxo" id="sltServidor">
                         
                     </select>
@@ -117,9 +118,9 @@
                         </h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="probFalha" style="color: red;">72%</p>
+                        <p class="dadoKpi" id="probFalha" style="color: red;">00</p>
                     </span>
-                    <h3>Quantidade de alerta total: <p>32</p>
+                    <h3>Quantidade de alerta total: <p id="qtdAlertasTotal">00</p>
 
                 </div>
 
@@ -136,11 +137,12 @@
                 <!-- USO DISCO -->
                 <div class="kpiIdv">
                     <div class="tituloKpi">
-                        <h2>MTBF Atual</h2>
+                        <h2>Tempo médio entre alertas (MTBF)</h2>
                     </div>
                     <span class="txtKpi">
                         <p class="dadoKpi" id="mtbf">52 min</p>
                     </span>
+                    <h3>Classificação: <b id="classificacaoMtbf">...</b></h3>
                 </div>
 
                 <!-- USO DISCO -->
@@ -151,7 +153,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="confiabilidade">42/100</p>
                     </span>
-                    <h3>Faixa: <p style="color: yellow;">Zona de risco</p>
+                    <h3>Status: <p style="color: yellow;">Zona de risco</p>
                     </h3>
                 </div>
 
