arruma rota jira e kpis admin

--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -59,35 +59,33 @@
                 <div class="kpiUso">
                     <div class="tituloKpi">
                         <h2>Fábrica mais crítica:</h2>
-                        <h3>13 Alertas em aberto</h3>
+                        <span class="txtKpi">
+                            <p class="dadoKpi" id="fabricaCritica" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                        </span>
+                        <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                     </div>
-                    <span class="txtKpi">
-                        <p class="dadoKpi" id="usoCpu" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
-                    </span>
-                    <h3><b id="parametroCpu" style="color: red; font-size: 14px;">Status: Crítico</b></h3>
                 </div>
 
                 <div class="kpiUso">
                     <div class="tituloKpi">
-                        <h2>Maior tempo na resolução dos alertas:</h2>
-                        <h3>50(Min)</h3>
+                        <h2>Tempo na resolução dos alertas:</h2>
+                        <span class="txtKpi">
+                            <p class="dadoKpi" id="nomeFabricaTempo" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                        </span>
+                        <h3 id="mediaAlerta">50(Min)</h3>
                     </div>
-                    <span class="txtKpi">
-                        <p class="dadoKpi" id="usoRam" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
-                    </span>
-                    <h3><b id="parametroRam" style="color: red; font-size: 14px;">Status: Crítico</b></h3>
                 </div>
 
                 <!-- USO DISCO -->
                 <div class="kpiUso">
                     <div class="tituloKpi">
                         <h2>Quantidade Fábricas em estado crítico</h2>
+                        <span class="txtKpi">
+                            <p class="dadoKpi" id="qtdFabricasCriticas" style="color: white; text-shadow: 2px 2px 4px red;">13 Fábricas</p>
+                        </span>
                         <h3>Clique <a id="fabricas">aqui</a> para ver elas</h3>
                     </div>
-                    <span class="txtKpi">
-                        <p class="dadoKpi" id="usoDisco" style="color: white; text-shadow: 2px 2px 4px red;">13 Fábricas</p>
-                    </span>
-                    <h3><b id="parametroDisco" style="color: red; font-size: 14px;">Crítico</b></h3>
+                    
                 </div>
             </div>
 
@@ -98,12 +96,11 @@
                     <div class="kpiUso">
                         <div class="tituloKpi">
                             <h2>Fábrica mais crítica:</h2>
-                            <h3>Fábrica 1</h3>
+                            <span class="txtKpi">
+                                <p class="dadoKpi" id="fabricaCritica" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                            </span>
+                            <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                         </div>
-                        <span class="txtKpi">
-                            <p class="dadoKpi" id="usoCpu" style="color: red;">Crítico</p>
-                        </span>
-                        <h3><b id="parametroCpu" style="color: red; font-size: 14px;">13 Alertas em aberto</b></h3>
                     </div>
                 </div>
 
