--- a/web-data-viz/public/dashDuda.html
+++ b/web-data-viz/public/dashDuda.html
@@ -87,9 +87,9 @@
                         <h3></h3>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="usoCpu" style="color: white; text-shadow: 2px 2px 4px red;">1º semana</p>
+                        <p class="dadoKpi"  style="color: white; text-shadow: 2px 2px 4px red;"><span id="semanaAlerta">x</span> semana</p>
                     </span>
-                    <h3><b id="parametroCpu" style="color: red; font-size: 14px;">70 Alertas</b></h3>
+                    <h3><b id="parametroCpu"  style="color: red; font-size: 14px;"><span id="qtdAlerta">x</span>Alertas</b></h3>
                 </div>
 
                 <div class="kpiUso">
