grafico semanal uso

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -176,7 +176,7 @@
                             </h4>
                             <div class="filtrar">
                                 <h3>Filtrar:</h3>
-                                <div class="iconeFiltro" onclick="abrirModal('CPU', 'uso')">
+                                <div class="iconeFiltro" onclick="filtrarUso()">
                                     <i class='bx bx-filter-alt' style="color: #ffffff;"></i>
                                 </div>
                             </div>
