filtrar grafico uso pronto

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -167,7 +167,8 @@
                     <div class="grafBox">
                         <div class="grafContainer">
                             <h4 style="display: flex; justify-content: space-between;width: 26vw;">
-                                Uso Médio vs Limite - CPU
+                                <div style="display: flex; gap: 5px;">Uso médio vs Limite - <p class="nomeComponente"> CPU</p> </div>
+
                                 <p style="border-bottom: solid 1px gray; color: gray;">
                                     <i class='bx bx-filter-alt'></i>
                                     <span id="tipoFiltro-uso">Anual</span> -
@@ -188,7 +189,7 @@
                     <div class="grafBox">
                         <div class="grafContainer">
                             <h4 style="display: flex; justify-content: space-between;width: 26vw;">
-                                Distribuição de alertas - CPU
+                                <div style="display: flex; gap: 5px;">Distribuição de alertas - <p class="nomeComponente">CPU</p></div>
                                 <p style="border-bottom: solid 1px gray; color: gray;">
                                     <i class='bx bx-filter-alt'></i>
                                     <span id="tipoFiltro-alertas">Anual</span> -
