Gestão de infra v6

--- a/web-data-viz/public/dashGestaofabrica.html
+++ b/web-data-viz/public/dashGestaofabrica.html
@@ -76,14 +76,14 @@
 
         <div class="dashboard-lista">
             <div class="cartao">
-                <h3 class="cartao-titulo2">Prioridade do componente na infraestrutura (recomendada)</h3>
+                <h3 class="cartao-titulo2">Prioridade de atenção do componente na infraestrutura (recomendada)</h3>
 
                  <div class="caixasumario2">
                     <div class="textovalor2">Nivel 1 de prioridade ⚠ </div>
                 
                 </div>
 
-                <h3 class="cartao-titulo">Alertas de CPU's (gravidade)</h3>
+                <h3 class="cartao-titulo">Alertas do componente (gravidade)</h3>
                
                <div id="bar-chart"></div>
 
@@ -91,7 +91,7 @@
             </div>
 
             <div class="cartao">
-                <h3 class="cartao-titulo2">Gastos estimados para troca da CPU</h3>
+                <h3 class="cartao-titulo2">Gastos estimados para troca do componente</h3>
                 <div class="caixasumario">
                     <div class="textovalor">Total de ≈ R$ 65.900,00</div>
                     <div class="valorporServidor">= R$ 13.900,00 por servidor</div>
@@ -168,7 +168,7 @@
         linha3.classList.toggle('linha3-active')
         menu.classList.toggle('nav-active')
 
-    })
+    });
 
 
 </script>
